@@ -3,7 +3,9 @@ Version Next
     - Changed IdGenerator to re-use the same instance on re-entrant invocation;
       NOTE: backward-incompatible change.
     - Added new Container classes, PropertyExtractor, and sorting to PropertyDef
+    - Added VaadinApplicationListener.unregisterOnApplicationCloseFrom()
     - Added AtomicUpdateFileOutputStream and {,File}StreamRepository
+    - Added AbstractDAO.contains()
     - Added ThreadLocalHolder
 
 Version 1.0.349 Released April 27, 2012
